@@ -88,9 +88,9 @@
   directly contact the server
   - [ ] Implement unit test, at least to be sure a server can't add itself twice
 **** TODO Client work
+     CLOCK: [2016-10-08 sam. 04:01]--[2016-10-08 sam. 05:02] =>  1:01
      CLOCK: [2016-10-06 jeu. 02:30]--[2016-10-06 jeu. 03:46] =>  1:16
 - [ ] See why client get stuck in 'parsing scripts' loading bar
-  II msg for loading is printed but not 
   Last message is :
   Parsing scripts for resource group Schemes
   Finished parsing scripts for resource group Schemes
@@ -99,6 +99,8 @@
     doesn't appear
   - It seems LoadingBar is shown only when all work is done.  
   - Try to see BspDemo as an example
+  - I changed the background color to see when ist drawn : at the end of loading  
+  - The screnn isn't updated if we change window
 - [ ] Maybe switch to OSG 3.4 ?
 **** DONE Git switch items
 ***** DONE Continue the INSTALL file
